Resolves: tdf#98390 ChartAreaPanel throw during ctor

after a ChartSidebarModifyListener pointing to it has been created and added to
the model, so ChartSidebarModifyListeners exist which point to a dead
ChartAreaPanel which has never even completed its ctor

workaround this by checking that properties it querys for exist
before accessing them and triggering the IllegalProperty throw

Change-Id: I0c251360714592c78132c0867903216f3866489a